style: fix date input color on iOS

--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@ input[type="date"] {
   display: block;
   appearance: none;
   -webkit-appearance: none;
+  color: #595651;
+  background-color: #fff;
 }
 
 textarea {
